<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jeu">

    <TableLayout
        android:id="@+id/grille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/r1l1"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_good"
                android:text="@string/lettre_a" />

            <TextView
                android:id="@+id/r1l2"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_good"
                android:text="@string/lettre_v" />

            <TextView
                android:id="@+id/r1l3"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_bad"
                android:text="@string/lettre_i" />

            <TextView
                android:id="@+id/r1l4"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_bad"
                android:text="@string/lettre_o" />

            <TextView
                android:id="@+id/r1l5"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_bad"
                android:text="@string/lettre_n" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/r2l1"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_valid"
                android:text="@string/lettre_v" />

            <TextView
                android:id="@+id/r2l2"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_valid"
                android:text="@string/lettre_a" />

            <TextView
                android:id="@+id/r2l3"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_valid"
                android:text="@string/lettre_g" />

            <TextView
                android:id="@+id/r2l4"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_valid"
                android:text="@string/lettre_u" />

            <TextView
                android:id="@+id/r2l5"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_valid"
                android:text="@string/lettre_e" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/r3l1"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r3l2"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r3l3"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r3l4"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r3l5"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/r4l1"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r4l2"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r4l3"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r4l4"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r4l5"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/r5l1"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r5l2"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r5l3"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r5l4"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r5l5"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/r6l1"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r6l2"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r6l3"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r6l4"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />

            <TextView
                android:id="@+id/r6l5"
                style="@style/MMZ.Game.Cell"
                android:background="@drawable/cell_default" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/vKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible">

        <TableRow
            android:id="@+id/keybTopRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/vKeyQ"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_q"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyW"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_w"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyE"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_e"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyR"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_r"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyT"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_t"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyY"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_y"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyU"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_u"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyI"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_i"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyO"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_o"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyP"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_p"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/keybMidRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/vKeyA"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_a"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyS"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_s"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyD"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_d"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyF"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_f"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyG"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_g"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyH"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_h"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyJ"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_j"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyK"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_k"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyL"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_l"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/keybBotRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/vKeyEnter"
                style="@style/MMZ.Game.VKeyboard.Large"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/enter"
                android:textSize="21sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyZ"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_z"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyX"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_x"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyC"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_c"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyV"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_v"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyB"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_b"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyN"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_n"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyM"
                style="@style/MMZ.Game.VKeyboard.Key"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/lettre_m"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/vKeyBack"
                style="@style/MMZ.Game.VKeyboard.Large"
                android:background="@drawable/vkeyb_key_default"
                android:text="@string/backspace"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/postGameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grille">

        <Button
            android:id="@+id/btnSuggestion"
            style="@style/MMZ.Button.Gris"
            android:layout_width="175dp"
            android:layout_marginBottom="50dp"
            android:text="@string/suggerer"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNextMot"
            style="@style/MMZ.Button.Bleu"
            android:text="@string/nextmot" />

        <Button
            android:id="@+id/btnRetourJeu"
            style="@style/MMZ.Button.Bleu"
            android:text="@string/retour" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>